a bit of refactoring. added jwt auth

--- a/unida-jwt-server/src/main/resources/index.html
+++ b/unida-jwt-server/src/main/resources/index.html
@@ -20,7 +20,7 @@
   <h2 class="card-subtitile">unida logar</h2>
   <hr/>
   <div class="row">
-    <form action="/form" ENCTYPE="multipart/form-data" method="POST" name="wibble">
+    <form action="/authenticate" ENCTYPE="multipart/form-data" method="POST" name="wibble">
       <div class="form-group">
         <label>username : </label>&nbsp;<input type="text" class="form-control" name="username"/><br/>
         <label>password : </label>&nbsp;<input type="password" class="form-control" name="password"/><br/>
